--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asheville Hillside Hideaway Guest Guidebook | Touch Stay</title>
+    <link rel="icon" href="/images/favicon.ico" />
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon-180x180.png" sizes="180x180" />
+    <link rel="mask-icon" href="/images/mask-icon.svg" color="#FFFFFF">
+    <meta name="theme-color" content="#ffffff">
     <!-- Lato Font Family -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
